crates/keron-lang/tests/corpus/errors/check/symlink_wrong_arg_type.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `String`, found `Int`
  --> 3:33
  |
3 | val s: Symlink = symlink(from = 1, to = "x")
  |                                 ^
